@@ -1,7 +1,7 @@
 project(openabel)
 set(BABEL_MAJ_VER   2)
-set(BABEL_MIN_VER   1)
-set(BABEL_PATCH_VER 1)
+set(BABEL_MIN_VER   2)
+set(BABEL_PATCH_VER 0b4)
 if(WIN32)
   set(BABEL_LIBRARY   openbabel-2)
 else(WIN32)
