@@ -1,11 +1,40 @@
+# 2008-03-15
 
 set(to_install
-    aromatic.txt bondtyp.txt isotope.txt resdata.txt
-    atomtyp.txt element.txt isotope-small.txt phmodel.txt
-    patterns.txt torlib.txt types.txt
-    SMARTS_InteLigand.txt
+    aromatic.txt
+    atomtyp.txt
+    bondtyp.txt
+    element.txt
+    fragments.txt
     ghemical.prm
-    logp.txt psa.txt mr.txt
+    isotope-small.txt
+    isotope.txt
+    logp.txt
+    mmffang.par
+    mmffbndk.par
+    mmffbond.par
+    mmffchg.par
+    mmffdef.par
+    mmffdfsb.par
+    mmffoop.par
+    mmffpbci.par
+    mmffprop.par
+    mmffstbn.par
+    mmfftor.par
+    mmffvdw.par
+    mr.txt
+    patterns.txt
+    phmodel.txt
+    plugindefines.txt
+    psa.txt
+    resdata.txt
+    ringtyp.txt
+    SMARTS_InteLigand.txt
+    space-groups.txt
+    space-groups.xsl # needed?
+    torlib.txt
+    types.txt
+    UFF.prm
 )
 
 install(FILES ${to_install} DESTINATION share/openbabel/${BABEL_VERSION})
